Compiler/tests/syntax/good/testfile-semicolon-1.rs
fn main() { ;; print!(1);;; println!(2); return; }
