Compiler/tests/syntax/bad/testfile-if-1.rs
fn main() { if true 42; }
